# TeSo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
teso/: bot.py  channels.py  database.py  engine.py  search.py
teso/alembic/: env.py
